load(
    "@bazel_gazelle//:def.bzl",
    "DEFAULT_LANGUAGES",
    "gazelle",
    "gazelle_binary",
)
load(
    "//cue/private:config.bzl",
    "cue_config",
)

exports_files(
    ["go.bzl"],
    visibility = ["//visibility:public"],
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@com_github_tnarg_rules_cue//gazelle/cue"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/tnarg/rules_cue
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

cue_config(
    name = "cue_config",
    stamp = select({
        "//cue/private:stamp": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)
