load(
    "@bazel_gazelle//:def.bzl",
    "gazelle",
)
load(
    "//cue/private:config.bzl",
    "cue_config",
)

# gazelle:prefix github.com/tnarg/rules_cue
gazelle(
    name = "gazelle",
)

cue_config(
    name = "cue_config",
    stamp = select({
        "//cue/private:stamp": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)
