module(
    name = "rules_cue",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_go", version = "0.55.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.24.4",
)

bazel_dep(name = "rules_shell", version = "0.5.0")

cue = use_extension("//cue:extensions.bzl", "cue")
use_repo(
    cue,
    "cue_tool_toolchains",
)

register_toolchains("@cue_tool_toolchains//:all")

bazel_dep(name = "gazelle", version = "0.44.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_pflag",
    "org_cuelang_go",
)

cue_modules = use_extension("//cue:extensions.bzl", "cue_modules")
use_repo(
    cue_modules,
    "cue_modules_summary",
)

cue_modules_dev = use_extension("//cue:extensions.bzl", "cue_modules", dev_dependency = True)
cue_modules_dev.cache(
    module_roots = [
        # keep sorted
        #"//test/testdata/consolidated/cue.mod",
        #"//test/testdata/hello_world/cue.mod",
        "//test/testdata/module/cue.mod",
        #"//test/testdata/myservice/cue.mod",
        #"//test/testdata/package/cue.mod",
    ],
)
use_repo(
    cue_modules_dev,
    "rules_cue_test_testdata_module_cue.mod_cue.mod",
)
