load(
    "//cue/private:config.bzl",
    "cue_config",
)

exports_files([
    "cue-run-from-archived-runfiles",
    "cue-run-from-runfiles",
])

cue_config(
    name = "cue_config",
    stamp = select({
        "//cue/private:stamp": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)
