load(
    "//cue/private:config.bzl",
    "cue_config",
)
load(
    "//cue/private:cue_bin_for_host.bzl",
    "cue_bin_for_host",
)

exports_files([
    "cue-run-from-archived-runfiles",
    "cue-run-from-runfiles",
])

cue_config(
    name = "cue_config",
    stamp = select({
        "//cue/private:stamp": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
)

cue_bin_for_host(
    name = "cue",
    visibility = ["//visibility:public"],
)
