module(
    name = "rules_cue_examples_gazelle",
    version = "0.0.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cue", version = "0.0.0")
bazel_dep(name = "gazelle", version = "0.44.0")

# Override rules_cue to use the local version
local_path_override(
    module_name = "rules_cue",
    path = "../../",
)

# Set up Go dependencies for Gazelle CUE extension
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@rules_cue//:go.mod")
use_repo(
    go_deps,
    "com_github_iancoleman_strcase",
    "org_cuelang_go",
)

