load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")

cue_export(
    name = "hello_world",
    srcs = ["hello_world.cue"],
    visibility = ["//visibility:public"],
)

cue_export(
    name = "message",
    srcs = ["hello_world.cue"],
    expression = "message",
    output_format = "text",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "de",
    srcs = ["de.cue"],
    visibility = ["//visibility:public"],
    deps = ["//examples/lang:cue_de_library"],
)

cue_export(
    name = "en",
    srcs = ["en.cue"],
    visibility = ["//visibility:public"],
    deps = ["//examples/lang:cue_en_library"],
)
