load(
    "//cue:cue.bzl",
    "cue_exported_files",
    "cue_exported_instance",
)

_MODULE = "//examples/hello_world/cue.mod"

cue_exported_files(
    name = "hello_world",
    srcs = ["hello_world.cue"],
    module = _MODULE,
)

cue_exported_files(
    name = "message",
    srcs = ["hello_world.cue"],
    expression = "message",
    module = _MODULE,
    output_format = "text",
)

cue_exported_files(
    name = "de",
    srcs = ["de.cue"],
    module = _MODULE,
    deps = ["//examples/hello_world/lang:cue_de_library"],
)

cue_exported_files(
    name = "en",
    srcs = ["en.cue"],
    module = _MODULE,
    deps = ["//examples/hello_world/lang:cue_en_library"],
)
