load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")

cue_export(
    name = "injection",
    src = "injection.cue",
    inject = {
        "b": "true",
        "i": "1",
        "n": "2.5",
        "s": "something",
    },
    inject_shorthand = [
        "prod",
    ],
    visibility = ["//visibility:public"],
)
