load(
    "//cue:cue.bzl",
    "cue_instance",
)

cue_instance(
    name = "cue_myservice",
    srcs = ["my-deployment.cue"],
    ancestor = "//examples/myservice/cue.mod",
    visibility = ["//examples/myservice:__subpackages__"],
    deps = ["//examples/myservice/cue.mod/pkg/k8s.io/api/apps/v1:cue_v1_library"],
)
