load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")

cue_export(
    name = "raw_text",
    srcs = ["raw.txt"],
    path = [
        "top:",
        "mid:",
    ],
    visibility = ["//visibility:public"],
)

cue_export(
    name = "multiple",
    srcs = [
        "path.cue",
        "raw.txt",
    ],
    path = [
        "path.Base(filename)",
    ],
    with_context = True,
    output_name = "multiple.json",
    visibility = ["//visibility:public"],
)
