load(
    "//cue:cue.bzl",
    "cue_exported_standalone_files",
)

cue_exported_standalone_files(
    name = "raw_text",
    srcs = ["raw.txt"],
    path = [
        "top:",
        "mid:",
    ],
    visibility = ["//visibility:public"],
)

cue_exported_standalone_files(
    name = "multiple",
    srcs = [
        "path.cue",
        "raw.txt",
    ],
    path = [
        "path.Base(filename)",
    ],
    result = "multiple.json",
    visibility = ["//visibility:public"],
    with_context = True,
)
