load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")

cue_export(
    name = "stamp",
    srcs = ["stamped.cue"],
    inject = {
        "builtat": "{BUILD_TIMESTAMP}",
        "builtby": "{BUILD_USER}",
        "message": "Goodbye.",
    },
    visibility = ["//visibility:public"],
    stamp = True,
)
