load(
    "//cue:cue.bzl",
    "cue_exported_standalone_files",
)

cue_exported_standalone_files(
    name = "stamp",
    srcs = ["stamped.cue"],
    inject = {
        "builtat": "{BUILD_TIMESTAMP}",
        "builtby": "{BUILD_USER}",
        "message": "Goodbye.",
    },
    visibility = ["//visibility:public"],
    stamping_policy = "Force",
)
