[
    alias(
        name = "os_{}".format(os),
        actual = actual,
        visibility = ["//visibility:public"],
    )
    for os, actual in {
        "darwin": "@platforms//os:osx",
        "linux": "@platforms//os:linux",
        "windows": "@platforms//os:windows",
    }.items()
]

[
    alias(
        name = "cpu_{}".format(cpu),
        actual = actual,
        visibility = ["//visibility:public"],
    )
    for cpu, actual in {
        "amd64": "@platforms//cpu:x86_64",
        "arm64": "@platforms//cpu:aarch64",
    }.items()
]
