load("@rules_cue//cue:cue.bzl", "cue_consolidated_instance", "cue_instance")

# gazelle:prefix github.com/abcue/rules_cue/examples/gazelle/contacts

cue_instance(
    name = "contacts_cue_instance",
    srcs = [
        "data.cue",
        "schema.cue",
    ],
    ancestor = "//cue.mod:cue.mod",
    package_name = "contacts",
    visibility = ["//visibility:public"],
)

cue_consolidated_instance(
    name = "contacts_cue_def",
    instance = ":contacts_cue_instance",
    output_format = "cue",
    visibility = ["//visibility:public"],
)
