load(
    "//cue:cue.bzl",
    "cue_exported_files",
)

cue_exported_files(
    name = "dev",
    module = "//examples/myservice/cue.mod",
    srcs = ["dev.cue"],
    deps = [
        "//examples/myservice:cue_myservice",
    ],
)

cue_exported_files(
    name = "prod",
    module = "//examples/myservice/cue.mod",
    srcs = ["prod.cue"],
    deps = [
        "//examples/myservice:cue_myservice",
    ],
)
