load(
    "//cue:cue.bzl",
    "cue_exported_files",
)

cue_exported_files(
    name = "dev",
    srcs = ["dev.cue"],
    module = "//examples/myservice/cue.mod",
    deps = [
        "//examples/myservice:cue_myservice",
    ],
)

cue_exported_files(
    name = "prod",
    srcs = ["prod.cue"],
    module = "//examples/myservice/cue.mod",
    deps = [
        "//examples/myservice:cue_myservice",
    ],
)
