load(
    "//cue:cue.bzl",
    "cue_exported_standalone_files",
)

exports_files(["injection-golden.json"])

cue_exported_standalone_files(
    name = "injection",
    srcs = ["injection.cue"],
    inject = {
        "b": "true",
        "i": "1",
        "n": "2.5",
        "s": "something",
    },
    inject_shorthand = [
        "prod",
    ],
    visibility = ["//test:__subpackages__"],
)
