load(
    "//cue:cue.bzl",
    "cue_instance",
)

cue_instance(
    name = "cue_myservice",
    srcs = ["my-deployment.cue"],
    ancestor = "//test/testdata/myservice/cue.mod",
    visibility = ["//test/testdata/myservice:__subpackages__"],
    deps = ["//test/testdata/myservice/cue.mod/pkg/k8s.io/api/apps/v1:cue_v1_library"],
)
