load(
    "//cue:cue.bzl",
    "cue_consolidated_standalone_files",
)

exports_files(["non-cue-golden.cue"])

cue_consolidated_standalone_files(
    name = "non-cue",
    srcs = [
        "merge.cue",
        "name.txt",
    ],
    output_package_name = "merged",
    path = [
        "name:",
    ],
    visibility = ["//test:__subpackages__"],
)
